# unio

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  SPEC.md  agent.go  agent_api_test.go  contract_test.go  example_test.go  facade.go  facade_test.go  go.mod  session.go  stream.go  support_matrix_generate.go  support_matrix_test.go
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  python-ci.yml  python-release.yml
docs/: API_SUPPORT.md  ERRORS.md  GENERATION.md  README.md  SPEC.md  SUPPORT_MATRIX_GENERATION.md  contract-v0.6.json  contract.json
driver/: driver.go  driver_test.go  event.go  eventbus.go  exec.go  exec_test.go  ids.go  registry.go  session_data.go  session_data_test.go
driver/acp/: config.go  driver.go  driver_test.go  process.go  protocol.go  session.go  session_statistics.go  session_statistics_test.go  transport.go
driver/claude/: driver.go  driver_test.go  headless.go  headless_test.go  helpers.go  path.go  session_data.go  session_data_test.go  sessions.go  sessions_test.go  transport.go
driver/codex/: appserver.go  appserver_test.go  builders.go  driver.go  driver_test.go  process.go  reader.go  session_data.go  session_data_test.go  sessions.go  (+2 more)
errs/: errs.go  errs_test.go
python/: CHANGELOG.md  README.md  pyproject.toml
python/examples/: basic.py  blocked.py  interrupt.py  stream.py
python/src/unio/: __init__.py  _agent.py  _driver.py  _session.py  _stream.py  errors.py  models.py
python/src/unio/_drivers/: __init__.py  acp.py  claude.py  codex.py  fake.py
python/tests/: test_api.py  test_contract.py  test_protocols.py
python/tests/e2e_real/: test_acp.py  test_codex.py
scripts/: generate-support-matrix.sh
tests/: fake_e2e_test.go  harness.go  real_acp_test.go  real_claude_test.go  real_codex_test.go  support_matrix_e2e_test.go
(+17 files in other folders)
