[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "unio-py"
version = "0.1.0"
description = "One async Python API for Claude Code, Codex, and ACP coding agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "unio contributors" }]
keywords = ["ai", "agents", "claude", "codex", "acp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/Fullstop000/unio"
Documentation = "https://github.com/Fullstop000/unio/tree/master/python"
Repository = "https://github.com/Fullstop000/unio.git"
Issues = "https://github.com/Fullstop000/unio/issues"
Changelog = "https://github.com/Fullstop000/unio/blob/master/python/CHANGELOG.md"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pyright>=1.1.400",
  "pytest>=8.3",
  "ruff>=0.12",
  "twine>=6.1",
]

[tool.hatch.build.targets.wheel]
packages = ["src/unio"]

[tool.hatch.build.targets.sdist]
exclude = ["/tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = ["e2e_real: authenticated real-runtime tests that may consume tokens"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC", "RUF"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src", "tests"]
venvPath = "."
venv = ".venv"
reportPrivateUsage = false
